--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -716,54 +716,59 @@ The introduction of the excitation operators allows us to provide a complete ope
 where the algebraic equivalence between the trace written in \eqref{RhopExcitationDef1} and the numerator of \eqref{RhopExcitationTransBasisDef1}
 can be easily proved.
 
-Thanks to the usage of the basis of transition, we have been able to express the response density as a linear superposition of excitations $\op E$. The perturbing field 
-determines the relative contribution of each excitation through the weighting coefficients in the numerator of \eqref{RhopExcitationDef1}.
-The fundamental question raised in the present paper, namely the ....reliable assessment of the results of the linear response can thus be reformulated in this language. 
+Thanks to the usage of the basis of transition, we have been able to express the response density as a linear superposition of excitation operators. Now 
+we are interested in analyzing this restatement of the linear response under the perspective of the main topic of the paper, namely the critical assessment 
+of the results provided by the linear response formalism in a given computational setup. Our interests are mainly twofold. First, to analyze the localization 
+properties of the excitations, in a analogous fashion of what done in section \ref{LocalizationFluctuationStates} for the fluctuation states. Second, to determine 
+the precise nature of the formal sum over excitations written in \eqref{RhopExcitationDef1}, in order to be able to discriminate between the discrete and the 
+continuum sector of the excitation spectrum.  
 
 \subsubsection{Excitation expansion of the fluctuation states. A localization argument for the excited states}
 
-We introduce the \emph{excited states} defined via the linear combination of the basis set orthogonal to $\dmnot$ with the
-coefficients that appears in \eqref{XYcoeffDef1}, that is:
-\begin{align}\lb{ExcitonicStatesDef1}
+%Thanks to the usage of the basis of transition, we have been able to express the response density as a linear superposition of excitations $\op E$. Now
+We push this formalism a little bit forward and derive the expansion of the fluctuation states \eqref{fluctuationStateDef1} in terms of the \emph{excited states} of the 
+system . Firstly, we introduce excited states, defined via the linear combination of the elements of the $\alpha$-basis with the coefficients that appears in 
+\eqref{XYcoeffDef1}, that is:
+\begin{align}\lb{ExcitedStatesDef1}
 \ket{\phi^E_p} &\equiv \sint \dd \alpha X_{E}^{p \alpha} \ket{\psi(\alpha)} &
 \tbra{\phi^E_p} &\equiv \sint \dd \alpha {\tilde X_{E}^{p \alpha}} \bra{\psi(\alpha)} \;, \nn\\
 \bra{\chi^E_p} &\equiv \sint \dd \alpha  Y_{E}^{p \alpha} \bra{\psi(\alpha)} &
-\tket{\chi^E_p} &\equiv \sint \dd \alpha {\tilde Y}_{E}^{p\alpha} \ket{\psi(\alpha)} \;.
+\tket{\chi^E_p} &\equiv \sint \dd \alpha {\tilde Y}_{E}^{p\alpha} \ket{\psi(\alpha)} \;,
 \end{align}
-Thanks to these definitions we can express the excitation operators as follows:
-\be\lb{ExctitationOperatorsDef2}
+due to these definitions we can express excitation operators as follows:
+\be\lb{ExcitationOperatorsDef2}
 \op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \qq
 \op {\tilde E} = \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
 \ee
-Starting from these equation we can derive the excitation expansion of the fluctuation states. Indeed an inspection of formula \eqref{rhoPrimeFluctuationStateDef1}
-show that fluctuation states can be extracted from the response density operator as follows:
+Formulas \eqref{ExcitationOperatorsDef2} provides a clear representation of the physical meaning of excited states \eqref{ExcitedStatesDef1}, as can be seen by applying
+the excitation operators on the occupied eigenstates of the systems:
+\be
+\op E\ket{\psi_p} = \ket{\phi^E_p} \;, \quad \bra{\psi_p} \op E = \bra{\chi^E_p} \;, \quad
+\op {\tilde E}\ket{\psi_p} = \tket{\chi^E_p} \;, \quad \bra{\psi_p} \op {\tilde E} = \tbra{\phi^E_p} \;.
+\nn
+\ee
+The excited states expansion of fluctuation states can be easily derived.  Indeed an inspection of formula \eqref{rhoPrimeFluctuationStateDef1} show that fluctuation 
+states can be extracted from the response density operator as follows:
 \be
 \ket{f_p(\omega)} = \dm'(\omega)\ket{\psi_p} \;, \qq
 \bra{f_p(-\omega)} = \bra{\psi_p}\dm'(\omega) \;, \nn
 \ee
-so plugging equations \eqref{ExctitationOperatorsDef2} in the formula \eqref{RhopExcitationDef1} and performing these operations we obtain:
+so plugging the expression \eqref{ExcitationOperatorsDef2} inside \eqref{RhopExcitationDef1} and applying the response density to a occupied state provides:
 \be\lb{FluctStateExcitationDef1}
 \ket{f_p(\omega)} = \sint\dd E \frac{\trace{\op{\tilde E}\opskew{\Phi}(\omega)}}{\bbomega-E} \ket{\phi^E_p} \;, \qq
-\bra{f_p(-\omega)} = \sint\dd E \bra{\chi^E_p}\frac{\trace{\op{\tilde E}\opskew{\Phi}(\omega)}}{\bbomega-E} 
+\bra{f_p(-\omega)} = \sint\dd E \bra{\chi^E_p}\frac{\trace{\op{\tilde E}\opskew{\Phi}(\omega)}}{\bbomega-E} \;.
+\ee
+Fluctuation states emerge as a linear superposition of excited states. The $\omega$-dependent coefficients codify the effect of the perturbing field in determining the 
+relative contribution of each addend through the weighting coefficients in the numerators of \eqref{FluctStateExcitationDef1}.  
+
+We perform a particular choice of the perturbing field:
+\be
+\op\Phi = \commutator{\op E}{\dmnot} \; \longrightarrow \; \opskew{\Phi} = 
+\commutator{\commutator{\op E}{\dmnot}}{\dmnot} = \op E
 \ee
 
-
-%\subsubsection{Sternheimer equation for excitonic states. Localization argument revisited}
 \subsubsection{Sternheimer equation for excited states. Localization argument revisited}
 
-% We introduce the \emph{excitonic states} defined via the linear combination of the basis set orthogonal to $\dmnot$ with the
-% coefficients that appears in \eqref{XYcoeffDef1}, that is:
-% \begin{align}\lb{ExcitonicStatesDef1}
-% \ket{\phi^E_p} &\equiv \sint \dd \alpha X_{E}^{p \alpha} \ket{\psi(\alpha)} &
-% \tbra{\phi^E_p} &\equiv \sint \dd \alpha {\tilde X_{E}^{p \alpha}} \bra{\psi(\alpha)} \;, \nn\\
-% \bra{\chi^E_p} &\equiv \sint \dd \alpha  Y_{E}^{p \alpha} \bra{\psi(\alpha)} &
-% \tket{\chi^E_p} &\equiv \sint \dd \alpha {\tilde Y}_{E}^{p\alpha} \ket{\psi(\alpha)} \;.
-% \end{align}
-% Thanks to these definitions we can express the excitation operators as follows:
-% \be\lb{ExctitationOperatorsDef2}
-% \op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \qq
-% \op {\tilde E} = \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
-% \ee
 The operator eigenvalue equations \eqref{opEeigenvalueDef1} and \eqref{optildeEeigenvalueDef1} can be translated into a Schroedinger-like equations
 for the excitonic states. 
 
@@ -778,7 +783,7 @@ for the excitonic states.
 \ee
 where $H_{0\alpha\beta} = \bra{\psi(\alpha)}\hnot\ket{\psi(\beta)}$. The eigenvalue conditions \eqref{LiouvMatrixEigenvectorDef1} imply
 that the $Y$ and $\tilde Y$ coefficients introduced in \eqref{XYcoeffDef1} vanish so that both $\tket{\chi^E_p}$ and $\bra{\chi^E_p}$ do not
-contribute to the excitation operators \eqref{ExctitationOperatorsDef2}. The eigenvalue operator equation for $\op E$ reduces to:
+contribute to the excitation operators \eqref{ExcitationOperatorsDef2}. The eigenvalue operator equation for $\op E$ reduces to:
 \be
 \sum_q\left(\hnot - \eps_q\right)\ket{\phi^E_q}\bra{\psi_q} = E \sum_q \ket{\phi^E_q}\bra{\psi_q} \;,
 \ee
@@ -869,7 +874,7 @@ here the action of the coupling superoperator on $\op E$ has been computed impos
 \left(\hnot-\eps_p\right)\ket{\phi^E_p} +\sint \dd\alpha  U\left[\decay{\alpha}{p}; \op E\right] \ket{\psi(\alpha)} &= E\ket{\phi^E_p} \;,\nn \\
 \bra{\chi^E_p}\left(\hnot-\eps_p\right) +\sint \dd\alpha \bra{\psi(\alpha)} U\left[\excite{p}{\alpha}; \op E\right] &= -E\bra{\chi^E_p} \;.
 \end{align}
-We observe that the coupling kernel behaves as a (non-local) potential that depends on both the $X_{E}^{p \alpha}$ and $Y_{E}^{p \alpha}$ coefficients of \eqref{ExcitonicStatesDef1}
+We observe that the coupling kernel behaves as a (non-local) potential that depends on both the $X_{E}^{p \alpha}$ and $Y_{E}^{p \alpha}$ coefficients of \eqref{ExcitedStatesDef1}
 thus introducing a coupling between the $\phi$ and $\chi$ states. 
 
 In the same way the right action provides:
