--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -464,7 +464,8 @@ of the fluctuation states, \emph{i.e.} the behavior of $f_p(\omega,\r)$ when $\r
 we have that, for $\r$ outside the domain in which the integrand of \eqref{fluctuationStateIntEq1} is not vanishing, the leading contribution of the fluctuation states
 is given by:
 \be\lb{fluctuationStateIntEq2}
-f_p(\omega,\r) \sim \frac{e^{\ii \sqrt{k^2_p(\omega)+\ii\eta} |\r|}}{|\r|} \;.
+f_p(\omega,\r) \sim \frac{e^{\ii \sqrt{k^2_p(\omega)+\ii\eta} |\r|}}{|\r|} \simeq 
+e^{-\frac{\eta}{2}|\r|} \frac{e^{\ii \sqrt{k^2_p(\omega)} |\r|}}{|\r|} \;.
 \ee
 We observe that the presence of the regularization parameter $\eta$ ensures a (slow) asymptotic convergence to zero, nonetheless the qualitative $\r$-dependence of the fluctuation 
 states is determined by the sign of $k^2_p(\omega)$. In particular equation \eqref{fluctuationStateIntEq2} describes an exponential damping for $\omega < |\eps_p|$ and an oscillating 
@@ -766,6 +767,7 @@ We perform a particular choice of the perturbing field:
 \op\Phi = \commutator{\op E}{\dmnot} \; \longrightarrow \; \opskew{\Phi} = 
 \commutator{\commutator{\op E}{\dmnot}}{\dmnot} = \op E
 \ee
+...to be continued...we have to state precisely the time-dependence of $\hone{t}$...
 
 \subsubsection{Sternheimer equation for excited states. Localization argument revisited}
 
